# FirebirdPlugin

./: .gitignore  BUILD_SOLUTION.md  BUILD_STATUS.md  BUILD_STATUS_UPDATE.md  BUILD_WINDOWS_ARM64.md  CMakeLists.txt  Makefile  README.md  SETUP_FIREBIRD5.md  build-quick.ps1  build-windows.ps1  create_music_db.py  drivers-comparison.md  enhancement_plan.md  firebird_xojo_detail_plan.md  music.fdb  phase_01.md  phase_01_article.md  phase_02.md  phase_02_article.md  phase_03.md  phase_03_article.md  phase_04.md  phase_04_article.md  phase_05.md  phase_05_article.md  phase_06.md  phase_06_article.md  phase_07.md  phase_07_article.md  phase_08.md  phase_08_article.md  phase_09.md  phase_09_article.md  phase_10.md  phase_10_article.md  phase_11.md  phase_11_article.md  phase_12.md  phase_12_article.md  (+28 more)
.claude/: settings.local.json
.github/workflows/: build.yml
build_win_arm64/: ALL_BUILD.vcxproj  FirebirdPlugin.slnx  FirebirdPlugin.vcxproj  FirebirdPlugin.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_win_arm64/ARM64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_win_arm64/ARM64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build_win_arm64/ARM64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_win_arm64/ARM64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_win_arm64/FirebirdPlugin.dir/Release/: FirebirdPlugin.dll.recipe
build_win_arm64/FirebirdPlugin.dir/Release/FirebirdPlugin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  FirebirdPlugin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_win_arm64/Release/: FirebirdPlugin.exp  FirebirdPlugin.lib
build_win_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  FirebirdPlugin.def  FirebirdPlugin.slnx  FirebirdPlugin.vcxproj  FirebirdPlugin.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_win_x64/FirebirdPlugin.dir/Release/: FirebirdPlugin.dll.recipe
build_win_x64/FirebirdPlugin.dir/Release/FirebirdPlugin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  FirebirdPlugin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_win_x64/Release/: FirebirdPlugin.exp  FirebirdPlugin.lib
build_win_x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_win_x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build_win_x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_win_x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
example-desktop/: .FirebirdSQL-Tests.xojo_uistate  App.xojo_code  FirebirdSQL-Tests.xojo_project  MainWindow.xojo_window
examples/: FirebirdExample_API2.xojo_code  QuickReference.xojo_code
sdk/GlueCode/: PluginMain.cpp
sdk/Includes/: REALplugin.h  rb_plugin.h  rb_plugin_deprecated.h
sources/: FirebirdDB.cpp  FirebirdDB.h  FirebirdLoader.cpp  FirebirdLoader.h  FirebirdPlugin.cpp  FirebirdPlugin.h
